Collada: Issues when importing files from Amnesia: the dark descent #34746

Closed
opened 2013-03-23 18:18:09 +01:00 by tiz bac · 5 comments

%%%--- Operating System, Graphics card ---

Opensuse 64 bits , Geforce 670 GTX

- Blender version with error, and version that worked ---

Blender 2.66

- Short description of error ---

On some model Blender crashes , like servant_grunt.dae , on other models it fails to import a working armature

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Opensuse 64 bits , Geforce 670 GTX - Blender version with error, and version that worked --- Blender 2.66 - Short description of error --- On some model Blender crashes , like servant_grunt.dae , on other models it fails to import a working armature - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Forgot to write it to the bug report, the collada files seems to be exported from maya 8.5%%%

%%%Forgot to write it to the bug report, the collada files seems to be exported from maya 8.5%%%

%%%Fixed the crash now, but the armature is still imported broken.%%%

%%%Fixed the crash now, but the armature is still imported broken.%%%
Member

%%%Collada import/export is not yet fully developed. This bug is known as a missing feature.
For this reason this Report has been set as "Closed/Todo" and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.6/Source/Development/Todo/Import_Export#OpenCollada

You can still update this report with more detailed information until it gets reopened/fixed.%%%

%%%Collada import/export is not yet fully developed. This bug is known as a missing feature. For this reason this Report has been set as "Closed/Todo" and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.6/Source/Development/Todo/Import_Export#OpenCollada You can still update this report with more detailed information until it gets reopened/fixed.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34746
No description provided.