Fix part of #34746: crash importing certain collada files with armatures. It still imports the armature wrong though.